fix: filter for Authorities